# deepfilter-lambda-container

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  serverless.yml
modules/: file.py  init.py  s3.py
